# pgtk

./: .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: main.yaml
pgtk/: __init__.py  __main__.py  cli.py  config.py  tsutils.py
pgtk/cli/: __init__.py  fileops.py  io.py  log.py  main.py  plot.py  stats.py
pgtk/fileops/: convert.py
pgtk/io/: dataset.py
pgtk/plotting/: allel.py  matrix.py  pca.py  stats.py
pgtk/stats/: linkage.py  pca.py
pgtk/tskit/: table.py
requirements/: development.txt  environment.yaml  test-environment.yaml
src/pgtk/: __init__.py  __main__.py  arguments.py  cli.py  config.py  decorators.py  env.py  options.py
src/pgtk/cli_old/: __init__.py  log.py  stats.py  tskit.py
src/pgtk/commands/: fops.py  plot.py  stats.py  tskit.py  vcf.py
src/pgtk/fileops/: concat.py  convert.py
src/pgtk/io/: vcf.py
src/pgtk/plotting/: __init__.py  allel.py  pca.py
src/pgtk/stats/: linkage.py  pca.py
src/pgtk/tools/: convert.py
src/pgtk/tools/plot/: pca.py
src/pgtk/tools/stats/: ld_prune.py  pca.py
src/pgtk/tools/tskit/: pca.py  sgkit.py
src/pgtk/tools/vcf/: makeref.py  makeseq.py  pca.py  polarize.py
src/pgtk/tskit/: convert.py  stats.py  tsutils.py
tests/: __init__.py  conftest.py  test_bokehutils.py  test_pgtk.py  test_tools_vcf.py  test_tsutils.py
tests/data/: README  bokeh.yaml  metadata.txt  ooa.chr21.small.vcf  ooa.chr21.vcf.gz.tbi  ooa.chr22.vcf.gz.tbi
tests/tskit/: conftest.py  test_table.py
