# see https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm>=6.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/pgtk/_version.py"

[project]
name = "pgtk"
authors = [
	{name = "Per Unneberg", email = "per.unneberg@scilifelab.se"},
]
description = "Population genomics toolkit"
readme = "README.md"
keywords = ["bioinformatics"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
    'importlib-metadata; python_version>="3.7"',
    'bokeh',
    'numpy',
    'cyvcf2',
    'dask',
    'python-dotenv',
    'click >= 8.0',
    'jinja2',
    'jsonschema',
    'pypandoc',
    'ruamel.yaml',
    'msprime',
    'tskit',
    'toml',
    'sgkit'
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "pgtk.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-data = { pgtk = [
	     "schemas/config.schema.yaml",
]}


[project.scripts]
pgtk = "pgtk.cli:cli"
pgtk-wf = "pgtk.wfcli:cli"
pgtk-vcf-polarize = "pgtk.tools.vcf.polarize:main"
pgtk-convert = "pgtk.tools.convert:main"
pgtk-vcf-makeref = "pgtk.tools.vcf.makeref:main"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --doctest-modules"
pythonpath = [
    "src"
]
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39
isolated_build = true

[gh-actions]
python =
    3.9: py39

[testenv:test]
changedir = tests
deps =
    pytest
    pytest-coverage
    pytest-shutil
    pytest-git
    pytest-runner
    pip>=22.1.0
    wheel
commands =
	 pytest --basetemp="{envtmpdir}" {posargs}
"""
